--- a/util/src/main/i18n/templates/ui.properties
+++ b/util/src/main/i18n/templates/ui.properties
@@ -1,6 +1,6 @@
-setting.title = Observer Tools
+setting.title = Observer Settings
 
-setting.displayName = Tools
+setting.displayName = Observer Settings
 
 setting.lore = Right-click to open the tool menu.
 
