--- a/util/src/main/i18n/templates/death.properties
+++ b/util/src/main/i18n/templates/death.properties
@@ -116,30 +116,37 @@ death.squash.player.entity = {0} was squashed by {1}'s falling {2}
 # {1} = killer player name
 death.melee.player = {0} felt the fury of {1}'s fists
 
+death.slain = slain
+
 # {0} = victim player name
 # {1} = killer player name
 # {2} = item name (e.g. "Stone Sword")
-death.melee.player.item = {0} was slain by {1}'s {2}
+# {5} = kill message
+death.melee.player.item = {0} was {5} by {1}'s {2}
 
 # {0} = victim player name
 # {3} = mob name (e.g. "Spider")
-death.melee.mob = {0} was slain by a {3}
+# {5} = kill message
+death.melee.mob = {0} was {5} by a {3}
 
 # {0} = victim player name
 # {2} = item name (e.g. "Golden Sword")
 # {3} = mob name (e.g. "Zombie Pigman")
-death.melee.mob.item = {0} was slain by a {3} with a {2}
+# {5} = kill message
+death.melee.mob.item = {0} was {5} by a {3} with a {2}
 
 # {0} = victim player name
 # {1} = killer player name
 # {3} = mob name (e.g. "Creeper")
-death.melee.player.mob = {0} was slain by {1}'s {3}
+# {5} = kill message
+death.melee.player.mob = {0} was {5} by {1}'s {3}
 
 # {0} = victim player name
 # {1} = killer player name
 # {2} = item name (e.g. "Diamond Axe")
 # {3} = mob name (e.g. "Zombie")
-death.melee.player.mob.item = {0} was slain by {1}'s {3} with a {2}
+# {5} = kill message
+death.melee.player.mob.item = {0} was {5} by {1}'s {3} with a {2}
 
 # {0} = victim player name
 death.projectile = {0} was hit by a stray arrow
